[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/Default/mononoki-Regular Nerd Font Complete Mono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Editor/Scenes/SongEditor/SongEditor.gd" type="Script" id=2]
[ext_resource path="res://util/Sequencer/Sequencer.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 9
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="SongEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 14.0
text = "Untitled Song"
align = 1

[node name="Timeline" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1280.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="Control" parent="Timeline"]
margin_right = 235.0
margin_bottom = 10.0
rect_min_size = Vector2( 235, 0 )

[node name="Timeline" type="ColorRect" parent="Timeline"]
margin_left = 239.0
margin_right = 1271.0
margin_bottom = 10.0
rect_min_size = Vector2( 750, 10 )
size_flags_horizontal = 3
color = Color( 0.0666667, 0.0666667, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Timeline/Timeline"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Timeline/Timeline/HBoxContainer"]
margin_right = 5.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Space2" type="Control" parent="Timeline"]
margin_left = 1275.0
margin_right = 1280.0
margin_bottom = 10.0
rect_min_size = Vector2( 5, 0 )

[node name="TracksScroll" type="ScrollContainer" parent="."]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="HBox" type="HBoxContainer" parent="TracksScroll"]
margin_right = 1280.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Names" type="VBoxContainer" parent="TracksScroll/HBox"]
margin_bottom = 688.0

[node name="SegmentScroll" type="ScrollContainer" parent="TracksScroll/HBox"]
margin_left = 4.0
margin_right = 1280.0
margin_bottom = 688.0
size_flags_horizontal = 3
scroll_vertical_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TracksScroll/HBox/SegmentScroll"]

[node name="Sequencer" parent="." instance=ExtResource( 3 )]

[connection signal="playback_finished" from="Sequencer" to="." method="_on_Sequencer_playback_finished"]
